Update to Java 21, Lift 4, Scala 3 and Jakarta servlets.